--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="/Users/felix_000/Desktop/TEST/CSS/master.css" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href="./CSS/master.css" media="screen" title="no title" charset="utf-8">
   <meta charset="utf-8">
   <title>Earvin Ngapeth</title>
 </head>
